--- a/web/modules/custom/mbta_api/mbta_api.services.yml
+++ b/web/modules/custom/mbta_api/mbta_api.services.yml
@@ -1,4 +1,4 @@
 services:
   mbta_api.client:
     class: Drupal\mbta_api\MBTAClient
-    arguments: ['@http_client']
+    arguments: ['@http_client', '@config.factory']
