--- a/config/block.block.bootstrap_breadcrumbs.yml
+++ b/config/block.block.bootstrap_breadcrumbs.yml
@@ -1,17 +1,17 @@
-uuid: 0f03d0e4-e0eb-4c96-9cb3-a39060033288
+uuid: 0b3fb058-ef34-4abf-a706-2042a7604410
 langcode: en
 status: true
 dependencies:
   module:
     - system
   theme:
-    - bartik
+    - bootstrap
 _core:
-  default_config_hash: oXUb3JZR2WW5VOdw4HrhRicCsq51mCgLfRyvheG68ck
-id: bartik_breadcrumbs
-theme: bartik
-region: breadcrumb
-weight: 0
+  default_config_hash: wDR9JKEATSWldBjw8du8s3G2zjEYeQf88nlld11hMLo
+id: bootstrap_breadcrumbs
+theme: bootstrap
+region: header
+weight: -100
 provider: null
 plugin: system_breadcrumb_block
 settings:
