--- a/config/block.block.bootstrap_footer.yml
+++ b/config/block.block.bootstrap_footer.yml
@@ -1,4 +1,4 @@
-uuid: a886ced0-c7e8-4ad4-bd1d-7590c914e0c8
+uuid: 335a96b5-db64-44ff-868b-e1798f6862c4
 langcode: en
 status: true
 dependencies:
@@ -7,12 +7,12 @@ dependencies:
   module:
     - system
   theme:
-    - bartik
+    - bootstrap
 _core:
-  default_config_hash: kkISXE1LT2FJEoYnqCrCpeFB-2pmGmMxMklVk7rQcfg
-id: bartik_footer
-theme: bartik
-region: footer_fifth
+  default_config_hash: h06zhb3xV9_2_3Zy9NsyylL7YBaEDlMwMEqNwAn8kMo
+id: bootstrap_footer
+theme: bootstrap
+region: footer
 weight: 0
 provider: null
 plugin: 'system_menu_block:footer'
