--- a/config/block.block.bootstrap_local_actions.yml
+++ b/config/block.block.bootstrap_local_actions.yml
@@ -1,15 +1,15 @@
-uuid: 876a10e8-38fe-4121-9b70-c7a5fb292d3b
+uuid: 964bf1f2-a1f1-4a65-b218-8d9167ead18f
 langcode: en
 status: true
 dependencies:
   theme:
-    - bartik
+    - bootstrap
 _core:
-  default_config_hash: 13GQpeITIJsp1kyPniXtWZfyFH87vb1xxJCHifL4UeE
-id: bartik_local_actions
-theme: bartik
-region: content
-weight: -20
+  default_config_hash: ffxthelqQF8xcr4GTG4HlaNNsluiHftN0pujmQpW0bQ
+id: bootstrap_local_actions
+theme: bootstrap
+region: header
+weight: 20
 provider: null
 plugin: local_actions_block
 settings:
