--- a/config/block.block.bootstrap_local_tasks.yml
+++ b/config/block.block.bootstrap_local_tasks.yml
@@ -1,15 +1,15 @@
-uuid: 66067b8d-4eeb-4ba9-b971-fd8ffa749454
+uuid: 1063b56d-c1a2-4ac7-9e8d-995f1fe5d4ef
 langcode: en
 status: true
 dependencies:
   theme:
-    - bartik
+    - bootstrap
 _core:
-  default_config_hash: X9I1OB0W3WlWtrK-CNcg6hNWwa8wficanpH8pYnDZDE
-id: bartik_local_tasks
-theme: bartik
-region: content
-weight: -40
+  default_config_hash: qHdtze2DZ2mFfaJadxjZz6epm92_SN9SAFY4yJGl8Fo
+id: bootstrap_local_tasks
+theme: bootstrap
+region: header
+weight: 10
 provider: null
 plugin: local_tasks_block
 settings:
