--- a/config/block.block.bootstrap_messages.yml
+++ b/config/block.block.bootstrap_messages.yml
@@ -1,17 +1,17 @@
-uuid: 2f0ff655-49dd-4259-8c3a-52a551793ef3
+uuid: a739919a-ba3e-4055-b34c-8160263cf922
 langcode: en
 status: true
 dependencies:
   module:
     - system
   theme:
-    - bartik
+    - bootstrap
 _core:
-  default_config_hash: KHQIJ7Vfl25lTjzIc7qIvnuistt-Mw2O0kG4jCofmkI
-id: bartik_messages
-theme: bartik
-region: highlighted
-weight: 0
+  default_config_hash: 9RnnTUBcn0WRWXfrGOnId2H0Q31uQUeu_F5TnDxl2yg
+id: bootstrap_messages
+theme: bootstrap
+region: header
+weight: -50
 provider: null
 plugin: system_messages_block
 settings:
