--- a/config/block.block.bootstrap_powered.yml
+++ b/config/block.block.bootstrap_powered.yml
@@ -1,17 +1,17 @@
-uuid: 4a844efa-39ac-440c-8847-7e4407fb68c5
+uuid: 717a1805-f5ed-4bb7-83e3-dd1627a93b9e
 langcode: en
 status: true
 dependencies:
   module:
     - system
   theme:
-    - bartik
+    - bootstrap
 _core:
-  default_config_hash: jQQUUWN2Uxr5qZtc9zcJKBCxpKY8orN1u2HPqYYRQDI
-id: bartik_powered
-theme: bartik
-region: footer_fifth
-weight: 10
+  default_config_hash: iggZSiUKz4mYP1YPJ8SsUfFu79HIgOTt6IDy3Up59aM
+id: bootstrap_powered
+theme: bootstrap
+region: footer
+weight: -10
 provider: null
 plugin: system_powered_by_block
 settings:
