--- a/config/block.block.bootstrap_search.yml
+++ b/config/block.block.bootstrap_search.yml
@@ -1,16 +1,16 @@
-uuid: ef25d2a7-0c3f-46da-8369-b291dba790d0
+uuid: bb743837-a53a-43cd-8309-1ab135786f2d
 langcode: en
-status: true
+status: false
 dependencies:
   module:
     - search
   theme:
-    - bartik
+    - bootstrap
 _core:
-  default_config_hash: za-39d5WDUg6XvbyqSnuVYEeq6QM4qKJxW8MnoAha5A
-id: bartik_search
-theme: bartik
-region: sidebar_first
+  default_config_hash: F3d5hyAFunLh4PhGviJF019fHn1Z3_zy5gzsQ0tX1K0
+id: bootstrap_search
+theme: bootstrap
+region: sidebar_second
 weight: -1
 provider: null
 plugin: search_form_block
