--- a/config/core.extension.yml
+++ b/config/core.extension.yml
@@ -1,4 +1,6 @@
 module:
+  admin_toolbar: 0
+  admin_toolbar_tools: 0
   automated_cron: 0
   big_pipe: 0
   block: 0
@@ -8,7 +10,6 @@ module:
   comment: 0
   config: 0
   config_direct_save: 0
-  contact: 0
   contextual: 0
   datetime: 0
   dblog: 0
@@ -22,7 +23,9 @@ module:
   history: 0
   image: 0
   link: 0
+  mbta_api: 0
   menu_ui: 0
+  module_filter: 0
   node: 0
   options: 0
   page_cache: 0
@@ -46,8 +49,8 @@ module:
 theme:
   stable: 0
   classy: 0
-  bartik: 0
   seven: 0
+  bootstrap: 0
 profile: standard
 _core:
   default_config_hash: R4IF-ClDHXxblLcG0L7MgsLvfBIMAvi_skumNFQwkDc
