Fixed routing path.

--- a/web/modules/custom/mbta_api/mbta_api.routing.yml
+++ b/web/modules/custom/mbta_api/mbta_api.routing.yml
@@ -17,7 +17,7 @@ mbta_api.route_controller_content:
     _permission: 'access content'
 
 mbta_api.schedules_controller_content:
-  path: 'routes/{route}/{direction}'
+  path: '/routes/{route}/{direction}'
   defaults:
     _controller: '\Drupal\mbta_api\Controller\SchedulesController::content'
     _title: 'MBTA Route Schedules'
